--- a/src/index.html
+++ b/src/index.html
@@ -415,7 +415,185 @@
           </div>
         </div>
       </section>
-      <section class="gallery"></section>
+      <section class="gallery">
+        <div class="container">
+          <h3 class="gallery__title">Фото</h3>
+          <div class="gallery__list-slider swiper">
+            <ul class="gallery__list swiper-wrapper">
+              <li class="gallery__item swiper-slide">
+                <a
+                  class="gallery__link"
+                  href="./assets/image/gallery-image-1.webp"
+                  data-fslightbox="gallery"
+                >
+                  <img
+                    src="./assets/image/gallery-image-1.webp"
+                    alt="Здание где показан магазин СК-Сеть"
+                  />
+                </a>
+              </li>
+              <li class="gallery__item swiper-slide">
+                <a
+                  class="gallery__link"
+                  href="./assets/image/gallery-image-2.webp"
+                  data-fslightbox="gallery"
+                >
+                  <img
+                    src="./assets/image/gallery-image-2.webp"
+                    alt="Здание где показан магазин СК-Сеть"
+                  />
+                </a>
+              </li>
+              <li class="gallery__item swiper-slide">
+                <a
+                  class="gallery__link"
+                  href="./assets/image/gallery-image-3.webp"
+                  data-fslightbox="gallery"
+                >
+                  <img
+                    src="./assets/image/gallery-image-3.webp"
+                    alt="Здание где показан магазин СК-Сеть"
+                  />
+                </a>
+              </li>
+              <li class="gallery__item swiper-slide">
+                <a
+                  class="gallery__link"
+                  href="./assets/image/gallery-image-4.webp"
+                  data-fslightbox="gallery"
+                >
+                  <img
+                    src="./assets/image/gallery-image-4.webp"
+                    alt="Здание где показан магазин СК-Сеть"
+                  />
+                </a>
+              </li>
+              <li class="gallery__item swiper-slide">
+                <a
+                  class="gallery__link"
+                  href="./assets/image/gallery-image-5.webp"
+                  data-fslightbox="gallery"
+                >
+                  <img
+                    src="./assets/image/gallery-image-5.webp"
+                    alt="Здание где показан магазин СК-Сеть"
+                  />
+                </a>
+              </li>
+              <li class="gallery__item swiper-slide">
+                <a
+                  class="gallery__link"
+                  href="./assets/image/gallery-image-6.webp"
+                  data-fslightbox="gallery"
+                >
+                  <img
+                    src="./assets/image/gallery-image-6.webp"
+                    alt="Здание где показан магазин СК-Сеть"
+                  />
+                </a>
+              </li>
+              <li class="gallery__item swiper-slide">
+                <a
+                  class="gallery__link"
+                  href="./assets/image/gallery-image-7.webp"
+                  data-fslightbox="gallery"
+                >
+                  <img
+                    src="./assets/image/gallery-image-7.webp"
+                    alt="Здание где показан магазин СК-Сеть"
+                  />
+                </a>
+              </li>
+              <li class="gallery__item swiper-slide">
+                <a
+                  class="gallery__link"
+                  href="./assets/image/gallery-image-1.webp"
+                  data-fslightbox="gallery"
+                >
+                  <img
+                    src="./assets/image/gallery-image-1.webp"
+                    alt="Здание где показан магазин СК-Сеть"
+                  />
+                </a>
+              </li>
+              <li class="gallery__item swiper-slide">
+                <a
+                  class="gallery__link"
+                  href="./assets/image/gallery-image-2.webp"
+                  data-fslightbox="gallery"
+                >
+                  <img
+                    src="./assets/image/gallery-image-2.webp"
+                    alt="Здание где показан магазин СК-Сеть"
+                  />
+                </a>
+              </li>
+              <li class="gallery__item swiper-slide">
+                <a
+                  class="gallery__link"
+                  href="./assets/image/gallery-image-3.webp"
+                  data-fslightbox="gallery"
+                >
+                  <img
+                    src="./assets/image/gallery-image-3.webp"
+                    alt="Здание где показан магазин СК-Сеть"
+                  />
+                </a>
+              </li>
+              <li class="gallery__item swiper-slide">
+                <a
+                  class="gallery__link"
+                  href="./assets/image/gallery-image-4.webp"
+                  data-fslightbox="gallery"
+                >
+                  <img
+                    src="./assets/image/gallery-image-4.webp"
+                    alt="Здание где показан магазин СК-Сеть"
+                  />
+                </a>
+              </li>
+              <li class="gallery__item swiper-slide">
+                <a
+                  class="gallery__link"
+                  href="./assets/image/gallery-image-5.webp"
+                  data-fslightbox="gallery"
+                >
+                  <img
+                    src="./assets/image/gallery-image-5.webp"
+                    alt="Здание где показан магазин СК-Сеть"
+                  />
+                </a>
+              </li>
+              <li class="gallery__item swiper-slide">
+                <a
+                  class="gallery__link"
+                  href="./assets/image/gallery-image-6.webp"
+                  data-fslightbox="gallery"
+                >
+                  <img
+                    src="./assets/image/gallery-image-6.webp"
+                    alt="Здание где показан магазин СК-Сеть"
+                  />
+                </a>
+              </li>
+              <li class="gallery__item swiper-slide">
+                <a
+                  class="gallery__link"
+                  href="./assets/image/gallery-image-7.webp"
+                  data-fslightbox="gallery"
+                >
+                  <img
+                    src="./assets/image/gallery-image-7.webp"
+                    alt="Здание где показан магазин СК-Сеть"
+                  />
+                </a>
+              </li>
+            </ul>
+          </div>
+          <button class="gallery__button button" data-moreBtn="Button">Показать еще</button>
+          <div class="gallery__scrollbar"></div>
+        </div>
+      </section>
       <div class="text__decor-wrapper">
         <div class="text__decor text__decor--second">
           <span>П</span><span>Р</span><span>О</span><span>Д</span><span>А</span><span>Ж</span
@@ -426,7 +604,50 @@
         <div class="container">
           <h3 class="contacts__title">Контакты</h3>
           <div class="contacts__top">
-            <h4></h4>
+            <address class="contacts__social">
+              <ul class="contacts__social-list">
+                <li class="contacts__social-item">
+                  Телефон:
+                  <a class="contacts__social-link" href="tel:+79960739426" target="_blank"
+                    >+7 (996) 073-94-26</a
+                  >
+                </li>
+                <li class="contacts__social-item">
+                  Почта:
+                  <a
+                    class="contacts__social-link"
+                    href="mailto:skupkafoto@gmail.com"
+                    target="_blank"
+                    >skupkafoto@gmail.com</a
+                  >
+                </li>
+                <li class="contacts__social-item">
+                  Авито:
+                  <a
+                    class="contacts__social-link"
+                    href="https://avito.ru/brands/643534ed312d00f297d03d9abb1edf53"
+                    target="_blank"
+                    >СК-Сеть</a
+                  >
+                </li>
+                <li class="contacts__social-item">
+                  Адреса:
+                  <div class="contacts__social-links">
+                    <a
+                      class="contacts__social-link"
+                      href="https://yandex.ru/maps/65/novosibirsk/?from=mapframe&ll=82.974572%2C55.073678&mode=poi&poi%5Bpoint%5D=82.974444%2C55.073680&poi%5Buri%5D=ymapsbm1%3A%2F%2Forg%3Foid%3D180477791622&source=mapframe&um=constructor%3Ad0061aa01bbdae8b3d90c1eb301330535a334ac8c57acaef7cf38e1ae4e8d492&utm_source=mapframe&z=21"
+                      target="_blank"
+                      >Улица Авиастроителей, 15, Новосибирск</a
+                    >;<br /><a
+                      class="contacts__social-link"
+                      href="https://yandex.ru/maps/65/novosibirsk/?from=mapframe&ll=82.914536%2C55.059822&mode=poi&poi%5Bpoint%5D=82.914392%2C55.059874&poi%5Buri%5D=ymapsbm1%3A%2F%2Forg%3Foid%3D82113163235&source=mapframe&um=constructor%3Ad0061aa01bbdae8b3d90c1eb301330535a334ac8c57acaef7cf38e1ae4e8d492&utm_source=mapframe&z=21"
+                      target="_blank"
+                      >Красный проспект, 188, Новосибирск</a
+                    >;
+                  </div>
+                </li>
+              </ul>
+            </address>
             <div class="contacts__map">
               <script
                 type="text/javascript"
