--- a/src/service.html
+++ b/src/service.html
@@ -1104,6 +1104,6 @@
         <p class="footer__copyright">© Copyright 2025, Все права защищены</p>
       </div>
     </footer>
-    <script type="module" src="/js/main.js"></script>
+    <script type="module" src="/js/service.js"></script>
   </body>
 </html>
