--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
             </div>
             <textarea
               class="form__input form__input--textarea"
-              name="user-message"
+              name="user-model-device"
               required
               placeholder="iPhone 15 Pro 256gb silver"
             ></textarea>
@@ -51,7 +51,7 @@
             Состояние устройства, недостатки внешние или технические
             <textarea
               class="form__input form__input--textarea"
-              name="user-message"
+              name="user-status-device"
               placeholder="Как новое, есть царапины, неисправно"
             ></textarea>
           </label>
@@ -59,7 +59,7 @@
             Комплект к устройству
             <textarea
               class="form__input form__input--textarea"
-              name="user-message"
+              name="user-kit-device"
               placeholder="Зарядка, аккумулятор, коробка, чек"
             ></textarea>
           </label>
@@ -83,7 +83,7 @@
             <input
               id="user-file"
               class="form__input form__input--file"
-              name="user-file"
+              name="user-photo-device"
               type="file"
             />
           </label>
