50/50 service-item-page

--- a/src/service-item-page.html
+++ b/src/service-item-page.html
@@ -97,6 +97,71 @@
     <main class="main">
       <section class="service-item-page">
         <div class="container">
+          <div class="service-item-page__slider swiper">
+            <ul class="service-item-page__slider-list swiper-wrapper">
+              <li class="service-item-page__slider-item swiper-slide">
+                <a
+                  class="service-item-page__slider-link"
+                  href="./assets/image/services-1.jpg"
+                  data-fslightbox="service"
+                >
+                  <img src="./assets/image/services-1.jpg" alt="Изображение товара" />
+                </a>
+              </li>
+              <li class="service-item-page__slider-item swiper-slide">
+                <a
+                  class="service-item-page__slider-link"
+                  href="./assets/image/services-2.jpg"
+                  data-fslightbox="service"
+                >
+                  <img src="./assets/image/services-2.jpg" alt="Изображение товара" />
+                </a>
+              </li>
+              <li class="service-item-page__slider-item swiper-slide">
+                <a
+                  class="service-item-page__slider-link"
+                  href="./assets/image/services-3.jpg"
+                  data-fslightbox="service"
+                >
+                  <img src="./assets/image/services-3.jpg" alt="Изображение товара" />
+                </a>
+              </li>
+              <li class="service-item-page__slider-item swiper-slide">
+                <a
+                  class="service-item-page__slider-link"
+                  href="./assets/image/services-1.jpg"
+                  data-fslightbox="service"
+                >
+                  <img src="./assets/image/services-1.jpg" alt="Изображение товара" />
+                </a>
+              </li>
+              <li class="service-item-page__slider-item swiper-slide">
+                <a
+                  class="service-item-page__slider-link"
+                  href="./assets/image/services-2.jpg"
+                  data-fslightbox="service"
+                >
+                  <img src="./assets/image/services-2.jpg" alt="Изображение товара" />
+                </a>
+              </li>
+              <li class="service-item-page__slider-item swiper-slide">
+                <a
+                  class="service-item-page__slider-link"
+                  href="./assets/image/services-3.jpg"
+                  data-fslightbox="service"
+                >
+                  <img src="./assets/image/services-3.jpg" alt="Изображение товара" />
+                </a>
+              </li>
+            </ul>
+            <button
+              class="service-item-page__slider-button service-item-page__slider-button--next"
+            ></button>
+            <button
+              class="service-item-page__slider-button service-item-page__slider-button--prev"
+            ></button>
+            <div class="service-item-page__slider-pagination"></div>
+          </div>
           <div class="service-item-page__info">
             <h3 class="service-item-page__info-name">Cмapтфон iPhоnе 11, 64 гб</h3>
             <p class="service-item-page__info-price"><span>17 000</span> ₽</p>
