--- a/src/service-item-page.html
+++ b/src/service-item-page.html
@@ -47,6 +47,10 @@
           </label>
           <button class="form__button form__button button">Отправить</button>
         </form>
+        <p class="modal__description">
+          Расчет по карте, наличными, кредитной картой, по расчетному счету. Работаем с юридическими
+          лицами.
+        </p>
       </div>
     </div>
     <div class="work-status" data-workStatus="window">
@@ -154,26 +158,113 @@
                 </a>
               </li>
             </ul>
-            <button
-              class="service-item-page__slider-button service-item-page__slider-button--next"
-            ></button>
-            <button
-              class="service-item-page__slider-button service-item-page__slider-button--prev"
-            ></button>
+            <button class="service-item-page__slider-button service-item-page__slider-button--next">
+              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="24" viewBox="0 0 12 24">
+                <path
+                  fill="currentColor"
+                  fill-rule="evenodd"
+                  d="M10.157 12.711L4.5 18.368l-1.414-1.414l4.95-4.95l-4.95-4.95L4.5 5.64l5.657 5.657a1 1 0 0 1 0 1.414"
+                />
+              </svg>
+            </button>
+            <button class="service-item-page__slider-button service-item-page__slider-button--prev">
+              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="24" viewBox="0 0 12 24">
+                <path
+                  fill="currentColor"
+                  fill-rule="evenodd"
+                  d="M10.157 12.711L4.5 18.368l-1.414-1.414l4.95-4.95l-4.95-4.95L4.5 5.64l5.657 5.657a1 1 0 0 1 0 1.414"
+                />
+              </svg>
+            </button>
             <div class="service-item-page__slider-pagination"></div>
           </div>
           <div class="service-item-page__info">
-            <h3 class="service-item-page__info-name">Cмapтфон iPhоnе 11, 64 гб</h3>
-            <p class="service-item-page__info-price"><span>17 000</span> ₽</p>
-            <button class="service-item-page__info-button button" data-modal="btn">
-              Подробнее
-            </button>
+            <div class="service-item-page__info-left">
+              <h3 class="service-item-page__info-name">Cмapтфон iPhоnе 11, 64 гб</h3>
+              <p class="service-item-page__info-price"><span>17 000</span> ₽</p>
+              <pre class="service-item-page__info-description">
+Память встроенная 64 ГБ
+Фотокамера основная 12 МП
+Аккумулятор: 3110 мА·ч
+Операционная система: iОS
+Стандарт связи: 3G, 4G LТЕ
+Вес: 194 г</pre
+              >
+              <button class="service-item-page__info-button button" data-modal="btn">Купить</button>
+            </div>
+            <div class="service-item-page__info-center">
+              <pre class="service-item-page__info-more">
+Cмapтфон Iрhоnе 11, 64 гб (зелёный)
+B идeaльном cоcтоянии.
+Вcе функции oт А до Я pабочиe.
+Faсе ID, True Tone pабoтaет oтличнo.
+Любые пpoвepки привeтcтвуются.
+Комплeкт: Коpoбкa
+Имeeтcя чек
+Состoяние аккумулятора 72%
+Без ремонтов!
+Состояние и комплект на фото</pre
+              >
+            </div>
+            <div class="service-item-page__info-right">
+              <h4 class="service-item-page__info-right-title">
+                <span class="service-item-page__info-right-title--accent">СК</span>-Сеть
+              </h4>
+              <p class="service-item-page__info-right-description">
+                Покупаем и продаем электронику.
+              </p>
+              <div class="service-item-page__info-right-address">
+                <a
+                  class="service-item-page__info-right-address-link"
+                  href="https://yandex.ru/maps?ll=82.97444500000000289219315164%2C55.07368000000000307636582875&mode=routes&rtext=~55.07368000000000307636582875%2C82.97444500000000289219315164&z=17"
+                  target="_blank"
+                >
+                  <svg
+                    class="meta__icon"
+                    width="16"
+                    height="16"
+                    viewBox="0 0 16 16"
+                    fill="currentColor"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M0.890137 6.99916C0.890137 3.13336 4.07416 0 8.0013 0C11.9284 0 15.1125 3.13424 15.1125 7.00005C15.1125 9.75385 13.4973 12.1361 11.148 13.2792C9.61286 14.0641 8.71392 14.8845 8.40014 15.7397C8.34298 15.8966 8.1683 16.001 8.0013 16.001C7.8343 16.001 7.6573 15.8966 7.60014 15.7397C7.28636 14.8845 6.38973 14.0641 4.85461 13.2792C2.50615 12.1352 0.890137 9.75296 0.890137 6.99916ZM8.0013 8.99917C9.12308 8.99917 10.0333 8.10406 10.0333 6.99916C10.0333 5.89426 9.12308 5.00003 8.0013 5.00003C6.87951 5.00003 5.96928 5.89515 5.96928 7.00005C5.96928 8.10495 6.87951 9.00006 8.0013 9.00006V8.99917Z"
+                    ></path>
+                  </svg>
+                  <span>Улица Авиастроителей, 15</span></a
+                >
+                <a
+                  class="service-item-page__info-right-address-link"
+                  href="https://yandex.ru/maps?ll=82.97444500000000289219315164%2C55.07368000000000307636582875&mode=routes&rtext=~55.07368000000000307636582875%2C82.97444500000000289219315164&z=17"
+                  target="_blank"
+                >
+                  <svg
+                    class="meta__icon"
+                    width="16"
+                    height="16"
+                    viewBox="0 0 16 16"
+                    fill="currentColor"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M0.890137 6.99916C0.890137 3.13336 4.07416 0 8.0013 0C11.9284 0 15.1125 3.13424 15.1125 7.00005C15.1125 9.75385 13.4973 12.1361 11.148 13.2792C9.61286 14.0641 8.71392 14.8845 8.40014 15.7397C8.34298 15.8966 8.1683 16.001 8.0013 16.001C7.8343 16.001 7.6573 15.8966 7.60014 15.7397C7.28636 14.8845 6.38973 14.0641 4.85461 13.2792C2.50615 12.1352 0.890137 9.75296 0.890137 6.99916ZM8.0013 8.99917C9.12308 8.99917 10.0333 8.10406 10.0333 6.99916C10.0333 5.89426 9.12308 5.00003 8.0013 5.00003C6.87951 5.00003 5.96928 5.89515 5.96928 7.00005C5.96928 8.10495 6.87951 9.00006 8.0013 9.00006V8.99917Z"
+                    ></path>
+                  </svg>
+                  <span>Улица Красный Проспект, 188</span></a
+                >
+              </div>
+              <a class="service-item-page__info-right-work-status" data-workStatus="btn" href="#"></a>
+            </div>
           </div>
         </div>
       </section>
       <section id="services" class="services">
         <div class="container">
-          <h3 class="services__title">Каталог</h3>
+          <h3 class="services__title">Может понравиться</h3>
           <div class="services__filter swiper">
             <ul class="services__filter-list swiper-wrapper">
               <li class="services__filter-item swiper-slide">
@@ -195,7 +286,7 @@
           </div>
           <ul class="services__list">
             <li class="services__item" data-filter="Аксессуары">
-              <a class="services__link" href="#">
+              <a class="services__link" href="/sk-set/service-item-page.html">
                 <div class="services__item-slider swiper">
                   <ul class="services__item-imgs swiper-wrapper">
                     <li class="services__item-img swiper-slide">
@@ -253,7 +344,7 @@
               </a>
             </li>
             <li class="services__item" data-filter="Аксессуары">
-              <a class="services__link" href="#">
+              <a class="services__link" href="/sk-set/service-item-page.html">
                 <div class="services__item-slider swiper">
                   <ul class="services__item-imgs swiper-wrapper">
                     <li class="services__item-img swiper-slide">
@@ -311,7 +402,7 @@
               </a>
             </li>
             <li class="services__item" data-filter="Компьютеры">
-              <a class="services__link" href="#">
+              <a class="services__link" href="/sk-set/service-item-page.html">
                 <div class="services__item-slider swiper">
                   <ul class="services__item-imgs swiper-wrapper">
                     <li class="services__item-img swiper-slide">
@@ -369,7 +460,7 @@
               </a>
             </li>
             <li class="services__item" data-filter="Ноутбуки">
-              <a class="services__link" href="#">
+              <a class="services__link" href="/sk-set/service-item-page.html">
                 <div class="services__item-slider swiper">
                   <ul class="services__item-imgs swiper-wrapper">
                     <li class="services__item-img swiper-slide">
@@ -427,7 +518,7 @@
               </a>
             </li>
             <li class="services__item" data-filter="Телефоны">
-              <a class="services__link" href="#">
+              <a class="services__link" href="/sk-set/service-item-page.html">
                 <div class="services__item-slider swiper">
                   <ul class="services__item-imgs swiper-wrapper">
                     <li class="services__item-img swiper-slide">
@@ -485,7 +576,7 @@
               </a>
             </li>
             <li class="services__item" data-filter="Телефоны">
-              <a class="services__link" href="#">
+              <a class="services__link" href="/sk-set/service-item-page.html">
                 <div class="services__item-slider swiper">
                   <ul class="services__item-imgs swiper-wrapper">
                     <li class="services__item-img swiper-slide">
@@ -543,7 +634,7 @@
               </a>
             </li>
             <li class="services__item" data-filter="Ноутбуки">
-              <a class="services__link" href="#">
+              <a class="services__link" href="/sk-set/service-item-page.html">
                 <div class="services__item-slider swiper">
                   <ul class="services__item-imgs swiper-wrapper">
                     <li class="services__item-img swiper-slide">
@@ -601,7 +692,7 @@
               </a>
             </li>
             <li class="services__item" data-filter="Ноутбуки">
-              <a class="services__link" href="#">
+              <a class="services__link" href="/sk-set/service-item-page.html">
                 <div class="services__item-slider swiper">
                   <ul class="services__item-imgs swiper-wrapper">
                     <li class="services__item-img swiper-slide">
