--- a/src/service-item-page.html
+++ b/src/service-item-page.html
@@ -237,7 +237,7 @@ Faсе ID, True Tone pабoтaет oтличнo.
                 >
                 <a
                   class="service-item-page__info-right-address-link"
-                  href="https://yandex.ru/maps?ll=82.97444500000000289219315164%2C55.07368000000000307636582875&mode=routes&rtext=~55.07368000000000307636582875%2C82.97444500000000289219315164&z=17"
+                  href="https://yandex.ru/maps/org/sk_set/82113163235/?ll=82.915014%2C55.059730&mode=search&sctx=ZAAAAAgBEAAaKAoSCfxtT5DYv1RAERwKn62DiUtAEhIJ%2BBvtuOF3uz8R3%2BF2aFiMoj8iBgABAgMEBSgKOABAsp0GSAFqAnJ1nQHNzMw9oAEAqAEAvQF0WB0QwgEMhpvCqqAF49%2FN8rECggIN0KHQmi3RgdC10YLRjIoCAJICAJoCDGRlc2t0b3AtbWFwcw%3D%3D&sll=82.927274%2C55.070046&sspn=0.283161%2C0.095615&text=%D0%A1%D0%9A-%D1%81%D0%B5%D1%82%D1%8C&z=19.47"
                   target="_blank"
                 >
                   <svg
@@ -257,7 +257,11 @@ Faсе ID, True Tone pабoтaет oтличнo.
                   <span>Улица Красный Проспект, 188</span></a
                 >
               </div>
-              <a class="service-item-page__info-right-work-status" data-workStatus="btn" href="#"></a>
+              <a
+                class="service-item-page__info-right-work-status"
+                data-workStatus="btn"
+                href="#"
+              ></a>
             </div>
           </div>
         </div>
