--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,7 @@
         электроники
       </h1>
       <div class="container header__container">
-        <a class="header__logo" href="/">
+        <a class="header__logo" href="/sk-set/">
           <img src="./assets/image/logo.png" alt="Логотип Ск-сеть" />
         </a>
         <nav class="header__nav nav" data-burger="menu">
@@ -1275,7 +1275,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer__info">
-          <a class="footer__logo" href="/">
+          <a class="footer__logo" href="/sk-set/">
             <img src="./assets/image/logo.png" alt="Логотип Ск-сеть" />
           </a>
           <p class="footer__org">
